--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Upload Image</title>
+    <title></title>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style.css') }}"
+    />
   </head>
   <body>
-    <h1>Upload Image</h1>
-    <form action="/upload" method="POST" enctype="multipart/form-data">
-      <input type="file" name="file" />
-      <br /><br />
-      <input type="submit" value="Upload" />
-    </form>
+    <div class="Head">
+      <h1 class="logo">SKIN CANCER DETECTOR 2.0</h1>
+    </div>
+    <div class="body">
+      <h1 class="title">Upload Image</h1>
+      <form action="/upload" method="POST" enctype="multipart/form-data">
+        <div class="img">
+          <input type="file" name="file" class="file" />
+        </div>
+        <br /><br />
+        <input type="submit" value="Upload" />
+      </form>
+    </div>
   </body>
 </html>
