--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
     <title></title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='style.css') }}"
+      href="../static/style.css"
+      
     />
   </head>
   <body>
