--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
         <br /><br />
         <input type="submit" value="Upload" />
       </form>
+      <hi>Result: </hi>
     </div>
   </body>
 </html>
