--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
-.body{
+.body, .upload{
     display: flex;
     flex-direction: column;
     justify-content: center;
