--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
           <input type="file" name="file" class="file" />
         </div>
         <br /><br />
-        <input type="submit" value="Upload" />
+        <input class="upload" type="submit" value="Upload" />
       </form>
       <hi>Result: </hi>
     </div>
