--- a/static/style.css
+++ b/static/style.css
@@ -23,8 +23,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
 
+}
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .img{
     width: 500px;
     height: 400px;
