--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,31 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title></title>
-    <link
-      rel="stylesheet"
-      href="../static/style.css"
-      
-    />
-  </head>
-  <body>
-    <div class="Head">
-      <h1 class="logo">SKIN CANCER DETECTOR 2.0</h1>
-    </div>
-    <div class="body">
-      <h1 class="title">Upload Image</h1>
-      <form action="/upload" method="POST" enctype="multipart/form-data">
-        <div class="img">
-          <input type="file" name="file" class="file" />
+{% extends "base.html" %} {% block content %}
+
+<h2>Image Classifier</h2>
+
+<div>
+    <form id="upload-file" method="post" enctype="multipart/form-data">
+        <label for="imageUpload" class="upload-label">
+            Choose...
+        </label>
+        <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
+    </form>
+
+    <div class="image-section" style="display:none;">
+        <div class="img-preview">
+            <div id="imagePreview">
+            </div>
         </div>
-        <br /><br />
-        <input class="upload" type="submit" value="Upload" />
-      </form>
-      <hi>Result: </hi>
+        <div>
+            <button type="button" class="btn btn-primary btn-lg " id="btn-predict">Predict!</button>
+        </div>
     </div>
-  </body>
-</html>
+
+    <div class="loader" style="display:none;"></div>
+
+    <h3 id="result">
+        <span> </span>
+    </h3>
+
+</div>
+
+{% endblock %}
