--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,50 @@
   <h3 id="result">
     <span> </span>
   </h3>
+  <div id="result-info">
+    <div id="basal">
+      <p>
+        Basal cell carcinoma is the most common type of skin cancer. It arises
+        from the basal cells in the lower epidermis, which are responsible for
+        producing new skin cells. Basal cell carcinoma often appears as a waxy
+        bump, a non-healing sore, or a pinkish patch on the skin.
+      </p>
+      <p>
+        Although basal cell carcinoma rarely spreads to other parts of the body,
+        it can cause local damage if left untreated. Prompt medical evaluation
+        and treatment are recommended if you notice any abnormal skin growths or
+        changes.
+      </p>
+    </div>
+    <div id="squamous">
+      <p>
+        Squamous cell carcinoma is a common type of skin cancer that develops
+        from the squamous cells in the outermost layer of the skin. It is
+        usually caused by cumulative exposure to the sun over the years and is
+        often found on sun-exposed areas, such as the face, ears, and hands.
+      </p>
+      <p>
+        While squamous cell carcinoma is typically not as aggressive as
+        melanoma, early detection and treatment are still important. If you
+        notice any persistent scaly patches, open sores, or growths on your
+        skin, it is advisable to seek medical attention.
+      </p>
+    </div>
+    <div id="melanoma">
+      <p>
+        Melanoma is a type of skin cancer that develops from melanocytes, the
+        cells that produce melanin (the pigment that gives color to the skin,
+        hair, and eyes). It is the most dangerous form of skin cancer and can
+        spread to other parts of the body.
+      </p>
+      <p>
+        Early detection and treatment of melanoma are crucial for favorable
+        outcomes. If you suspect any changes in your skin, such as new moles or
+        changes in existing moles, it is important to consult a healthcare
+        professional.
+      </p>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
