--- a/templates/index.html
+++ b/templates/index.html
@@ -38,10 +38,27 @@
         bump, a non-healing sore, or a pinkish patch on the skin.
       </p>
       <p>
-        Although basal cell carcinoma rarely spreads to other parts of the body,
-        it can cause local damage if left untreated. Prompt medical evaluation
-        and treatment are recommended if you notice any abnormal skin growths or
-        changes.
+        Causes: 
+        <ol>
+          <li>Chronic exposure to ultraviolet (UV) radiation from the sun or
+          tanning beds is the most significant risk factor for BCC. </li>
+          <li>Fair-skinned individuals and those with a history of sunburns or a family history of
+          skin cancer are more susceptible.</li>
+          <li> Weakened immune systems, exposure to
+          radiation or arsenic, and certain genetic syndromes may also increase
+          the risk.</li></ol>
+      </p>
+      <p>
+        Treatment:
+        <ol> 
+          <li>For small BCCs, surgical procedures like excision, curettage,
+        and electrodesiccation (scraping and burning) may be used.</li>
+        <li> Mohs surgery, a specialized technique that removes thin layers of cancer-containing
+        skin until no cancer cells remain, is often recommended for larger or
+        more aggressive tumors.</li>
+        <li>Other treatment options include cryotherapy
+        (freezing the tumor), laser therapy, and topical medications like
+        imiquimod or 5-fluorouracil.</li> </ol>
       </p>
     </div>
     <div id="squamous">
@@ -52,10 +69,23 @@
         often found on sun-exposed areas, such as the face, ears, and hands.
       </p>
       <p>
-        While squamous cell carcinoma is typically not as aggressive as
-        melanoma, early detection and treatment are still important. If you
-        notice any persistent scaly patches, open sores, or growths on your
-        skin, it is advisable to seek medical attention.
+        Causes:
+        <ol>
+          <li>Like BCC, SCC is mainly caused by prolonged exposure to UV
+        radiation from the sun or tanning beds. </li>
+        <li>Fair-skinned individuals, older
+        people, and those with weakened immune systems or a history of chronic
+        skin inflammation are at higher risk.</li>
+      </p></ol> 
+      <p>
+        Treatment:
+        <ol>
+          <li>Surgical excision is the standard treatment for SCC.</li>
+          <li>Mohs surgery may also be employed for larger or more aggressive tumors.</li> 
+          <li>Radiation therapy can be used for tumors that cannot be easily removed
+          surgically. In some cases, topical medications, such as 5-fluorouracil
+          or imiquimod, might be prescribed.</li>
+        </ol> 
       </p>
     </div>
     <div id="melanoma">
@@ -66,10 +96,29 @@
         spread to other parts of the body.
       </p>
       <p>
-        Early detection and treatment of melanoma are crucial for favorable
-        outcomes. If you suspect any changes in your skin, such as new moles or
-        changes in existing moles, it is important to consult a healthcare
-        professional.
+        Causes:
+        <ol>
+          <li>Melanoma is often associated with intense, intermittent UV
+            exposure and sunburns. </li>
+        <li>Family history of melanoma, fair skin with
+          freckles, multiple moles, and a weakened immune system are risk factors.</li>
+        <li>UV radiation from tanning beds is also a risk factor for melanoma.</li>
+        </ol> 
+        
+      </p>
+      <p>
+        Treatment: 
+        <ol>
+         <li> Surgical excision is the primary treatment for early-stage
+        melanoma. </li>
+        <li>In advanced cases, surgical procedures might be combined with
+        other treatments, such as chemotherapy, immunotherapy, targeted therapy,
+        and radiation therapy. </li>
+        <li>Immunotherapy drugs like checkpoint inhibitors
+        (e.g., pembrolizumab, nivolumab) and targeted therapy drugs (e.g.,
+        vemurafenib, dabrafenib) have shown promising results in treating
+        advanced melanoma.</li>
+        </ol>
       </p>
     </div>
   </div>
