--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,68 @@
         </ol>
       </p>
     </div>
+    <div id="ak">
+      <p>
+        Actinic keratosis (AK), also known as solar keratosis or senile keratosis, is a precancerous skin condition caused by long-term exposure to ultraviolet (UV) radiation from the sun or artificial sources like tanning beds. It appears as rough, scaly patches on the skin, usually in areas exposed to the sun, such as the face, ears, scalp, neck, hands, and forearms.      </p>
+      <p>
+        Causes: <br>
+        The primary cause of actinic keratosis is chronic sun exposure, leading to the accumulation of DNA damage in the skin cells. Fair-skinned individuals, people with weakened immune systems, and those living in sunny climates are more susceptible to AK.
+      </p>
+      <p>
+        Treatment:
+        <ol> 
+          <li> Topical Medications: Prescription creams or gels containing 5-fluorouracil (5-FU), imiquimod, or diclofenac can be applied to the affected areas, leading to the shedding of abnormal skin cells.</li>
+        <li> Cryotherapy: Liquid nitrogen is used to freeze and destroy the AK lesions.</li>
+        <li>Curettage and Electrodessication: The lesions are scraped off with a curette, and an electric needle is used to control bleeding and destroy any remaining abnormal cells.</li>
+      <li>other treatment includes photodynamic Therapy (PDT) and Laser Therapy</li> </ol>
+      </p>
+    </div>
+    <div id="nevi">
+      <p>
+        A nevus, commonly referred to as a mole, is a benign growth on the skin that arises due to the accumulation of melanocytes, the cells responsible for skin pigmentation. Moles can appear anywhere on the body and may vary in size, color, and shape.</p>
+      <p>
+        Causes: <br>
+        The exact cause of nevi is not fully understood, but they are believed to be primarily influenced by genetics. Additionally, sun exposure and hormonal changes can also play a role in the development of moles. </p>
+      <p>
+        Treatment:
+        <ol> 
+          <li>  Surgical Excision: The mole is surgically cut out, and the wound is closed with stitches.</li>
+        <li> Shave Excision: The mole is shaved off at the skin's surface using a scalpel or razor.</li>
+        <li>Laser Removal: A laser is used to break down the pigment in the mole, causing it to fade away.</li>
+      <li>Electrocautery: The mole is burned off using an electrical current.</li> </ol>
+      </p>
+    </div>
+    <div id="pbk">
+      <p>
+        Pigmented benign keratosis (PBK), also known as seborrheic keratosis or senile wart, is a common non-cancerous skin growth. PBK usually appears as brown, black, or tan patches or bumps on the skin. These growths tend to be more prevalent in older individuals and can occur anywhere on the body, except for the palms and soles. <p>
+        Causes: <br>
+        The exact cause of pigmented benign keratosis is not well-understood, but it is believed to be linked to genetic factors and sun exposure.</p>
+      <p>
+        Treatment:
+        <ol> 
+          <li>  Cryotherapy: Freezing the growths with liquid nitrogen.</li>
+        <li> Curettage: Scraping off the lesion with a curette.</li>
+        <li>Electrocautery: Burning off the growth with an electric current.</li>
+      <li>Laser Therapy: Using laser to vaporize the lesion.</li> </ol>
+      </p>
+    </div>
+    <div id="vas">
+      <p>
+        Vascular lesions are abnormal clusters of blood vessels that can occur on or beneath the skin. This is a benign skin lesion meing it is non-cancerous <p>
+        Causes: <br>
+        The causes of vascular lesions vary depending on the specific type of lesion. Some vascular malformations are congenital, meaning they are present from birth and result from abnormal blood vessel development during fetal growth. Vascular tumors, on the other hand, may arise due to overgrowth of blood vessels at a later stage.  <p>
+        <p>
+          Treatment:
+        <ol> 
+          <li>  Laser Therapy: Pulsed-dye laser or other specialized lasers can be used to target and shrink blood vessels in vascular lesions.</li>
+        <li>  Sclerotherapy: A sclerosing agent is injected into the lesion to cause it to collapse and shrink.</li>
+        <li>Surgical Excision: Large or complex vascular lesions may require surgical removal.</li>
+      <li>Embolization: For some deep-seated vascular malformations, a procedure may be done to block the blood flow to the lesion using special materials.</li> </ol>
+      </p>
+    </div>
   </div>
+
+  
 </div>
 
 {% endblock %}
