--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,13 @@
 .img-preview {
-    width: 256px;
-    height: 256px;
+    width: 50%;
+    height: 50%;
     position: relative;
     border: 5px solid #F8F8F8;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
     margin-top: 1em;
     margin-bottom: 1em;    
+    display: flex;
+    margin-left: 25%;
 }
 
 .img-preview>div {
@@ -55,15 +57,15 @@ h2, h3{
     justify-content: center;
 }
 
-.img-preview{
-    margin-left: 40%;
-}
+
 
 
 .button{
     display: flex;
     justify-content: center;
 }
+
+
 
 
 
