--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>SKIN CANCER DETECTOR 2.0</title>
+    <title>SKIN CANCER DETECTOR</title>
     <link
       href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,9 +20,9 @@
   <body>
     <nav class="navbar navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">SKIN CANCER DETECTOR 2.0</a>
+        <a class="navbar-brand" href="#">SKIN CANCER DETECTOR</a>
         <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">
-          Help
+          Guide
         </button>
       </div>
     </nav>
