--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 
-<h2>Image Classifier</h2>
+<h2></h2>
 
 <div class="contain">
   <form id="upload-file" method="post" enctype="multipart/form-data">
@@ -19,7 +19,7 @@
     </div>
     <div class="button">
       <button type="button" class="btn btn-primary btn-lg" id="btn-predict">
-        Predict!
+        Detect 
       </button>
     </div>
   </div>
