--- a/templates/base.html
+++ b/templates/base.html
@@ -21,9 +21,23 @@
     <nav class="navbar navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="#">SKIN CANCER DETECTOR</a>
-        <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">
-          Guide
-        </button>
+        <div class="guides">
+          <button
+            class="btn btn-outline-secondary my-2 my-sm-0"
+            type="submit"
+            onclick="click()"
+          >
+            Guide
+          </button>
+          <div class="guide bg-dark">
+            <h6>Guide</h6>
+            <ol>
+              <li>Click the choose button</li>
+              <li>select the image for your directory</li>
+              <li>Click on detect to get your result</li>
+            </ol>
+          </div>
+        </div>
       </div>
     </nav>
     <div class="container">
