--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,48 @@
-{% extends "base.html" %} {% block content %}
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>SKIN CANCER DETECTOR</title>
+    <link
+      href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link
+      href="{{ url_for('static', filename='css/main.css') }}"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">SKIN CANCER DETECTOR</a>
+        <div class="guides">
+          <button
+            class="btn btn-outline-secondary my-2 my-sm-0"
+            type="submit"
+            onclick="click()"
+          >
+            Guide
+          </button>
+          <div class="guide bg-dark">
+            <h6>Guide</h6>
+            <ol>
+              <li>Click the choose button</li>
+              <li>select the image for your directory</li>
+              <li>Click on detect to get your result</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <div id="content" style="margin-top: 2em">
+        
 
 <h2></h2>
 
@@ -185,4 +229,16 @@
   
 </div>
 
-{% endblock %}
+
+
+      </div>
+    </div>
+  </body>
+
+  <footer>
+    <script
+      src="{{ url_for('static', filename='js/main.js') }}"
+      type="text/javascript"
+    ></script>
+  </footer>
+</html>
