--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,7 @@
     <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <link
-      href="{{ url_for('static', filename='css/main.css') }}"
-      rel="stylesheet"
-    />
+    <link href="../static//css/main.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -23,14 +20,14 @@
         <a class="navbar-brand" href="#">SKIN CANCER DETECTOR</a>
         <div class="guides">
           <button
-            class="btn btn-outline-secondary my-2 my-sm-0"
+            class="btn btn-outline-secondary my-5 my-sm-0"
             type="submit"
-            onclick="click()"
+            onclick="sell()"
           >
             Guide
           </button>
-          <div class="guide bg-dark">
-            <h6>Guide</h6>
+          <div class="guide" id="guid">
+            <h6 class="gh">GUIDE</h6>
             <ol>
               <li>Click the choose button</li>
               <li>select the image for your directory</li>
@@ -233,12 +230,12 @@
 
       </div>
     </div>
-  </body>
-
-  <footer>
     <script
-      src="{{ url_for('static', filename='js/main.js') }}"
-      type="text/javascript"
-    ></script>
-  </footer>
+  src="../static/js/main.js"
+  type="text/javascript"
+></script>
+<script   src="../static/js/script.js">
+</script>
+  </body>
+  
 </html>
