--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <link href="../static//css/main.css" rel="stylesheet" />
+    <link href="../static/css/main.css" rel="stylesheet" />
   </head>
 
   <body>
