--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <link href="../static/css/main.css" rel="stylesheet" />
+    <link href="./main.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -231,10 +231,10 @@
       </div>
     </div>
     <script
-  src="../static/js/main.js"
+  src="./js/main.js"
   type="text/javascript"
 ></script>
-<script   src="../static/js/script.js">
+<script   src="./js/script.js">
 </script>
   </body>
   
