--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,22 @@
     <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <link href="./main.css" rel="stylesheet" />
+    <link
+      href="{{ url_for('static', filename='css/main.css') }}"
+      rel="stylesheet"
+    />
+    <link href="./css/main.css" rel="stylesheet" />
+    <script
+    src="{{ url_for('static', filename='js/main.js') }}"
+    type="text/javascript"
+  ></script>
+  <script
+    src="{{ url_for('static', filename='js/script.js') }}"
+    type="text/javascript"
+  ></script>
+  <script   src="./js/main.js">
+  </script>
+  <script src="./js/script.js"></script>
   </head>
 
   <body>
@@ -27,7 +42,7 @@
             Guide
           </button>
           <div class="guide" id="guid">
-            <h6 class="gh">GUIDE</h6>
+            <h6 class="gh">Guide</h6>
             <ol>
               <li>Click the choose button</li>
               <li>select the image for your directory</li>
@@ -230,12 +245,7 @@
 
       </div>
     </div>
-    <script
-  src="./js/main.js"
-  type="text/javascript"
-></script>
-<script   src="./js/script.js">
-</script>
+    
   </body>
   
 </html>
